[project]
name = "wayscloud"
version = "0.2.1"
description = "Official Python SDK for the WAYSCloud API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["httpx>=0.25"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://wayscloud.services"
Documentation = "https://docs.wayscloud.services/integrations/sdk"
Repository = "https://github.com/wayscloudas/wayscloud-provision-api"
Issues = "https://github.com/wayscloudas/wayscloud-provision-api/issues"

[tool.setuptools.packages.find]
include = ["wayscloud*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
