[metadata]
name = wayscloud
version = 0.2.3
description = Official Python SDK for the WAYSCloud API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://wayscloud.services
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    httpx>=0.25

[options.packages.find]
include = wayscloud*

[options.package_data]
wayscloud = py.typed
